--- a/cliente/01.sintaxis.html
+++ b/cliente/01.sintaxis.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sintaxis</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Sintaxis</h1>
