--- a/cliente/01.sintaxis.html
+++ b/cliente/01.sintaxis.html
@@ -9,10 +9,19 @@
 <body>
   <h1>Sintaxis</h1>
 
+  <p>
+    <strong>JavaScript</strong> (abreviado comúnmente <strong>JS</strong>) es un lenguaje de programación interpretado, dialecto del estándar ECMAScript. Se define como orientado a objetos, basado en prototipos, imperativo, débilmente tipado y dinámico.
+  </p>
+
+  <p>Siempre usamos ECMAScript posterior a 2016.</p>
+
   <script>
     // Comentario de una línea
     /* Comentario de varias líneas */
     console.log('Hola mundo');
+
+    
+
   </script>
   <script src="01.sintaxis.js"></script>
 </body>
