--- a/cliente/01.sintaxis.html
+++ b/cliente/01.sintaxis.html
@@ -91,6 +91,131 @@
 
   <h3>Sintaxis</h3>
 
+  <p>Consideraciones de sintaxis en JS:</p>
+  <ul>
+    <li><strong>JavaScript Values: </strong>
+      los valores pueden ser fijos declarando variables con <code>const</code> o pueden ser <em>variables</em> usando <code>var</code> <strong>(obsoleto)</strong> o <code>let</code>. <strong>Nota:</strong> se recomienda usar <code>let</code> o <code>const</code> actualmente.
+    </li>
+    <li><strong>JavaScript Literals: </strong>
+    los números en JS pueden colocarse con decimales o sin decimales. Se usa el punto decimal <code>.</code> y se pueden separar grupos de ceros con <code>_</code>: 
+    <pre>
+      <code>
+        100.50  -> 100.50
+        100     -> 100
+        1_000   -> 1000</code>
+    </pre>
+    Las comillas simples <code>'</code> y dobles <code>"</code> se pueden usar para strings. Si necesitamos colocar comillas dobles dentro podemos escaparlas con <code>\</code>:
+    <pre>
+      <code>
+        "Hola 'mundo'"    -> Hola 'mundo'
+        "Hola \"mundo\""  -> Hola "mundo"</code>
+    </pre>
+    </li>
+    <li><strong>JavaScript Variables: </strong>
+    Las variables se deben declarar con <code>let</code> o <code>const</code>:
+    <pre>
+      <code>
+        let x = 5;    // Se puede cambiar su valor pero no se puede volver 
+                      // a delcarar esta variable
+        const y = 6;  // No se puede cambiar su valor</code>
+    </pre>
+    </li>
+    <li><strong>JavaScript Operators: </strong>
+    los operadores son símbolos que nos permiten realizar un cálculo o modificación de valor en una variable. Los veremos en el tema de operadores.
+    <pre>
+      <code>
+        let x = 5;
+        let y = 6;
+        let z = x + y;  // z = 11
+        // Operadores aritméticos: + - * /</code>
+    </pre>
+    </li>
+    <li><strong>JavaScript Expressions: </strong>
+    las expresiones sirven para realizar cálculos o comparaciones. Se pueden usar en condiciones, bucles, funciones, etc.
+    <pre>
+      <code>
+        let x = 5;
+        let y = 6;
+        let z = x + y;  // z = 11
+        // Más expresiones: x + y, x - y, x * y, x / y</code>
+    </pre>
+    </li>
+    <li><strong>JavaScript Keywords: </strong>
+    son las palabras clave que se usan en el lenguaje para determinadas acciones.
+    <pre>
+      <code>
+        let x = 5;
+        let y = 6;
+        let z = x + y;  // z = 11
+        // let es la palabra clave (keyword) para declarar variables</code>
+    </pre>
+    </li>
+    <li><strong>JavaScript Comments: </strong>
+    los mismos que en CSS: <code>//</code> para línea y <code>/* */</code> para bloque:
+    <pre>
+      <code>
+        // Comentario de una línea
+        
+        /* Comentario 
+          de varias 
+          líneas 
+        */</code>
+    </li>
+    <li><strong>JavaScript Identifiers / Names: </strong>
+    los nombre de variables no pueden empezar por números ni usar emojis, nombres válidos son:
+    <pre>
+      <code>
+        let x = 5;
+        let x2 = 6;
+        let x_2 = 7;
+        let _variable = "algo"
+        let $ = 8;</code>
+    </pre>
+    </li>
+    <li><strong>JavaScript is Case Sensitive: </strong>
+    las mayúsculas y minúsculas se diferencian:
+    <pre>
+      <code>
+        let x = 5;
+        let X = 6;
+        console.log(x, X);  // 5 6</code>
+      </code>
+    </pre>
+    </li>
+    <li><strong>JavaScript and Camel Case: </strong>
+    se empieza con minúscula y las siguientes palabras empiezan con mayúscula:
+    <pre>
+      <code>
+        let miVariable = 5;
+        let miVariableLarga = 6;
+        let miVariableSuperLarga = 7;</code>
+    </li>
+    <li><strong>JavaScript Character Set: </strong>
+    JS usa UTF-8 por defecto así que podemos usar emojis en texto:
+    <pre>
+      <code>
+        let x = "👍";
+        console.log(x);  // 👍</code>
+    </pre>
+    </li>
+    <li><strong>¿Por qué no usamos var?:</strong> <code>var</code> permite redeclarar variables ya declaradas anteriormente. Se introdujo <code>let</code> para evitar (no permitir) estas situaciones:
+    <pre>
+      
+      Usando var:
+      <code>
+        var x = 5;
+        var x = 6;
+        console.log(x);  // 6</code>
+      </code>
+      Y con let no se puede:
+      <code>
+        let y = 5;
+        let y = 6;
+        console.log(y);  // Error</code>
+    </pre>
+    </li>
+  </ul>
+
   <script>
     // Crear variables:
     var n;
