Ejercicios de Variables
- Ej01 caso 1

--- a/cliente/02.variables.html
+++ b/cliente/02.variables.html
@@ -25,7 +25,7 @@
 
   <ul>
     <li>No hay que complicarse con la gestión de memoria</li>
-    <li>No hay que encargarse de limpiar memoria cuando se dejan de usar variables/li>
+    <li>No hay que encargarse de limpiar memoria cuando se dejan de usar variables</li>
     <li>Es más fácil aprender a programar</li>
   </ul>
 
