Ej 03 código final

--- a/ejercicios/02.variables/variables.html
+++ b/ejercicios/02.variables/variables.html
@@ -11,14 +11,16 @@
   <h3>Salida:</h3>
   <p>Inputs: 100, 21</p>
   <p id="ej-1-1"></p>
-  <!-- <p>Inputs: 200, 21</p>
-  <p id="ej-1-2"></p> -->
-
+  <p>Inputs: 200, 21</p>
+  <p id="ej-1-2"></p>
   <!-- Importar los JS -->
   <script src="01.js"></script>
-  <!-- <script src="02.js"></script>
+  <h2>Ejercicio 02</h2>
+  <script src="02.js"></script>
+  <h2>Ejercicio 03</h2>
+  <p>Responde al <code>prompt()</code> y verás un <code>alert()</code> con un saludo</p>
   <script src="03.js"></script>
-  <script src="04.js"></script>
+  <!-- <script src="04.js"></script>
   <script src="05.js"></script> -->
 </body>
 </html>
