--- a/ejercicios/02.variables/variables.html
+++ b/ejercicios/02.variables/variables.html
@@ -20,7 +20,12 @@
   <h2>Ejercicio 03</h2>
   <p>Responde al <code>prompt()</code> y verás un <code>alert()</code> con un saludo</p>
   <script src="03.js"></script>
-  <!-- <script src="04.js"></script>
-  <script src="05.js"></script> -->
+  <h2>Ejercicio 04</h2>
+  <p id="ej-4-inputs"></p>
+  <p id="ej-4-output"></p>
+  <script src="04.js"></script>
+  <!-- 
+  <script src="05.js"></script> 
+  -->
 </body>
 </html>
