Añadimos diagramas de los ejercicios 06 al 10

--- a/ejercicios/02.variables/variables.html
+++ b/ejercicios/02.variables/variables.html
@@ -36,24 +36,24 @@
   <script src="05.js"></script>  
 
   <h2>Ejercicio 06</h2>
-  <!-- <img src="diagramas/06.png" alt="diagrama 6" width="300">
-  <script src="06.js"></script>  -->
+  <img src="diagramas/06.png" alt="diagrama 6" width="300">
+  <!--<script src="06.js"></script>  -->
 
   <h2>Ejercicio 07</h2>
-  <!-- <img src="diagramas/07.png" alt="diagrama 7" width="300">
-  <script src="07.js"></script>  -->
+  <img src="diagramas/07.png" alt="diagrama 7" width="300">
+  <!-- <script src="07.js"></script>  -->
 
   <h2>Ejercicio 08</h2>
-  <!-- <img src="diagramas/08.png" alt="diagrama 8" width="300">
-  <script src="08.js"></script>  -->
+  <img src="diagramas/08.png" alt="diagrama 8" width="300">
+  <!-- <script src="08.js"></script>  -->
 
   <h2>Ejercicio 09</h2>
-  <!-- <img src="diagramas/09.png" alt="diagrama 9" width="300">
-  <script src="09.js"></script>  -->
+  <img src="diagramas/09.png" alt="diagrama 9" width="300">
+  <!-- <script src="09.js"></script>  -->
 
   <h2>Ejercicio 10</h2>
-  <!-- <img src="diagramas/10.png" alt="diagrama 10" width="300">
-  <script src="10.js"></script> -->
+  <img src="diagramas/10.png" alt="diagrama 10" width="300">
+  <!-- <script src="10.js"></script> -->
   
 </body>
 </html>
