--- a/ejercicios/02.variables/variables.html
+++ b/ejercicios/02.variables/variables.html
@@ -37,7 +37,7 @@
 
   <h2>Ejercicio 06</h2>
   <img src="diagramas/06.png" alt="diagrama 6" width="300">
-  <!--<script src="06.js"></script>  -->
+  <script src="06.js"></script> 
 
   <h2>Ejercicio 07</h2>
   <img src="diagramas/07.png" alt="diagrama 7" width="300">
