Ejercicio 07 código final

--- a/ejercicios/02.variables/variables.html
+++ b/ejercicios/02.variables/variables.html
@@ -40,8 +40,10 @@
   <script src="06.js"></script> 
 
   <h2>Ejercicio 07</h2>
+  <p id="ej-7-input"></p>
+  <p id="ej-7-outputs"></p>
   <img src="diagramas/07.png" alt="diagrama 7" width="300">
-  <!-- <script src="07.js"></script>  -->
+  <script src="07.js"></script>
 
   <h2>Ejercicio 08</h2>
   <img src="diagramas/08.png" alt="diagrama 8" width="300">
