Ejercicio 08 código final

--- a/ejercicios/02.variables/variables.html
+++ b/ejercicios/02.variables/variables.html
@@ -47,7 +47,9 @@
 
   <h2>Ejercicio 08</h2>
   <img src="diagramas/08.png" alt="diagrama 8" width="300">
-  <!-- <script src="08.js"></script>  -->
+  <p id="ej-8-input"></p>
+  <p id="ej-8-output"></p>
+  <script src="08.js"></script> 
 
   <h2>Ejercicio 09</h2>
   <img src="diagramas/09.png" alt="diagrama 9" width="300">
