--- a/ejercicios/02.variables/variables.html
+++ b/ejercicios/02.variables/variables.html
@@ -53,7 +53,8 @@
 
   <h2>Ejercicio 09</h2>
   <img src="diagramas/09.png" alt="diagrama 9" width="300">
-  <!-- <script src="09.js"></script>  -->
+  <p>Ver salida por consola.</p>
+  <script src="09.js"></script>
 
   <h2>Ejercicio 10</h2>
   <img src="diagramas/10.png" alt="diagrama 10" width="300">
