--- a/cliente/03.operadores.html
+++ b/cliente/03.operadores.html
@@ -226,6 +226,79 @@
       </table>
     </div>
     <li>Operadores de Comparación</li>
+    <p>Operadores que permiten evaluar si dos datos son del mismo valor, mayor que, menor o igual, distintos, etc. La comparación puede tener en cuenta solo el valor (<code>==</code>) o también el tipo de los datos (<code>===</code>).</p>
+    <div class="table-container">
+      <table class="">
+        <tbody>
+          <tr>
+            <th style="width:12%">Operador</th>
+            <th>Descripción</th>
+            <th>Ejemplo:</th>
+          </tr>
+          <tr>
+            <td>==</td>
+            <td>igual que</td>
+            <td>
+              <code>1 == '1' // true</code>
+            </td>
+          </tr>
+          <tr>
+            <td>===</td>
+            <td>igual valor y tipo</td>
+            <td>
+              <pre><code>
+    1 === '1' // false (distinto tipo de datos) </code>
+  </pre>
+            </td>
+          </tr>
+          <tr>
+            <td>!=</td>
+            <td>desigual que (valor)</td>
+            <td><code>1 != '1' // false</code></td>
+          </tr>
+          <tr>
+            <td>!==</td>
+            <td>desigual valor o desigual tipo</td>
+            <td>
+            <code>1 !== '1' // true</code>
+            </td>
+          </tr>
+          <tr>
+            <td>&gt;</td>
+            <td>mayor que</td>
+            <td>
+              <code>5 &gt; 4 // true </code>
+            </td>
+          </tr>
+          <tr>
+            <td>&lt;</td>
+            <td>menor que</td>
+            <td>
+              <code>4 &lt; 5 // true </code>  
+            </td>
+          </tr>
+          <tr>
+            <td>&gt;=</td>
+            <td>mayor o igual que</td>
+            <td>
+              <code>5 &gt;= 5 // true (son iguales) </code>
+            </td>
+          </tr>
+          <tr>
+            <td>&lt;=</td>
+            <td>menor o igual que</td>
+            <td>
+              <code>5 &lt;= 5 // true (son iguales) </code>
+            </td>
+          </tr>
+          <tr>
+            <td>?</td>
+            <td>operador ternario</td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     <li>Operadores de Strings</li>
     <li>Operadores Lógicos</li>
     <li>Operadores Bitwise</li>
