Comparaciones añado observación

--- a/cliente/03.operadores.html
+++ b/cliente/03.operadores.html
@@ -226,7 +226,9 @@
       </table>
     </div>
     <li>Operadores de Comparación</li>
-    <p>Operadores que permiten evaluar si dos datos son del mismo valor, mayor que, menor o igual, distintos, etc. La comparación puede tener en cuenta solo el valor (<code>==</code>) o también el tipo de los datos (<code>===</code>).</p>
+    <p>Operadores que permiten evaluar si dos datos son del mismo valor, mayor que, menor o igual, distintos, etc. La comparación puede tener en cuenta solo el valor (<code>==</code>) o también el tipo de los datos (<code>===</code>).
+    <strong>El resultado de las comparaciones es un tipo <code>boolean</code> (true o false) por defecto.</strong>
+    </p>
     <div class="table-container">
       <table class="">
         <tbody>
