--- a/ejercicios/02.variables/variables.html
+++ b/ejercicios/02.variables/variables.html
@@ -14,51 +14,41 @@
   <p>Inputs: 200, 21</p>
   <p id="ej-1-2"></p>
   <!-- Importar los JS -->
-
   <script src="01.js"></script>
   <h2>Ejercicio 02</h2>
   <img src="diagramas/02.png" alt="diagrama 2" width="300">
   <script src="02.js"></script>
-
   <h2>Ejercicio 03</h2>
   <img src="diagramas/03.png" alt="diagrama 3" width="300">
   <p>Responde al <code>prompt()</code> y verás un <code>alert()</code> con un saludo</p>
   <script src="03.js"></script>
-
   <h2>Ejercicio 04</h2>
   <img src="diagramas/04.png" alt="diagrama 4" width="300">
   <p id="ej-4-inputs"></p>
   <p id="ej-4-output"></p>
   <script src="04.js"></script>
-
+  
   <h2>Ejercicio 05</h2>
   <img src="diagramas/05.png" alt="diagrama 5" width="300">
-  <script src="05.js"></script>  
-
+  <script src="05.js"></script> 
+  
   <h2>Ejercicio 06</h2>
-  <img src="diagramas/06.png" alt="diagrama 6" width="300">
-  <script src="06.js"></script> 
+  <!-- <img src="diagramas/06.png" alt="diagrama 6" width="300"> -->
+  <p id="ej-6-inputs"></p>
+  <p id="ej-6-output"></p>
+  <script src="06.js"></script>
 
   <h2>Ejercicio 07</h2>
-  <p id="ej-7-input"></p>
-  <p id="ej-7-outputs"></p>
-  <img src="diagramas/07.png" alt="diagrama 7" width="300">
+  <!-- <img src="diagramas/07.png" alt="diagrama 7" width="300"> -->
+  <p id="ej-7"></p>
   <script src="07.js"></script>
 
   <h2>Ejercicio 08</h2>
-  <img src="diagramas/08.png" alt="diagrama 8" width="300">
-  <p id="ej-8-input"></p>
-  <p id="ej-8-output"></p>
-  <script src="08.js"></script> 
+  <p id="ej-8"></p>
+  <script src="08.js"></script>
 
   <h2>Ejercicio 09</h2>
-  <img src="diagramas/09.png" alt="diagrama 9" width="300">
-  <p>Ver salida por consola.</p>
+  <p>Abrid consola para mirar el resultado :)</p>
   <script src="09.js"></script>
-
-  <h2>Ejercicio 10</h2>
-  <img src="diagramas/10.png" alt="diagrama 10" width="300">
-  <!-- <script src="10.js"></script> -->
-  
 </body>
 </html>
