--- a/ejercicios/04.string/index.html
+++ b/ejercicios/04.string/index.html
@@ -6,6 +6,7 @@
   <title>Demo</title>
 </head>
 <body>
+  <div id="myContainer">contenido de HTML</div>
   <h2>Lista sin enlaces:</h2>
   <div id="container"></div>
   <h2>Lista con enlaces:</h2>
