--- a/ejercicios/06.bucles/1.if/if.html
+++ b/ejercicios/06.bucles/1.if/if.html
@@ -41,11 +41,13 @@
     <h2>Ej 02</h2>
     <p id="ej02" style="margin-bottom: 1rem;"></p>
     <br>
-    <a href="#" onclick="main()" class="buttonClass">Ejecutar main() de ej 02</a>
+    <a href="#" onclick="ej2()" class="buttonClass">Ejecutar main() de ej 02</a>
   </div>
   <!-- Importamos myPrint() -->
   <script src="myPrint.js"></script>
   <!-- Ejercio 02 -->
   <script src="ej2.js"></script>
+  <!-- Ejercio 03 -->
+  <script src="ej3.js"></script>
 </body>
 </html>
