Actualizamos salida de ej 03 en página web

--- a/cliente/02.variables.html
+++ b/cliente/02.variables.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Variables en JS</h1>
+    <h2>01</h2>
+    <h2>02</h2>
+    <h2>03. Saludar</h2>
+    <p id="saludo"></p>
+    <script src="./02.variables/03.js"></script>
 </body>
 </html>
