--- a/cliente/02.variables.html
+++ b/cliente/02.variables.html
@@ -11,7 +11,10 @@
     <h2>01</h2>
     <h2>02</h2>
     <h2>03. Saludar</h2>
-    <p id="saludo"></p>
+    <p id="saludo">Este saludo no se va a leer.</p>
     <script src="./02.variables/03.js"></script>
+    <h2>04. Calcular media</h2>
+    <p id="media">Resultado:&nbsp;</p>
+    <script src="./02.variables/04.js"></script>
 </body>
 </html>
