--- a/cliente/02.variables.html
+++ b/cliente/02.variables.html
@@ -16,5 +16,8 @@
     <h2>04. Calcular media</h2>
     <p id="media">Resultado:&nbsp;</p>
     <script src="./02.variables/04.js"></script>
+    <h2>05. Consumo de combustible</h2>
+    <p id="consumo">El consumo de combustible es:&nbsp;</p>
+    <script src="./02.variables/05.js"></script>
 </body>
 </html>
